--- a/themes/picture-wall/picture-wall-settings.css
+++ b/themes/picture-wall/picture-wall-settings.css
@@ -26,6 +26,7 @@ background: white !important;
     border: white!important;
     border-width: 20px!important;
     border-style: solid!important;
+    background: #353742b5;
 }
 
 
