Make images stretch

--- a/themes/bqp-bcxp-oeb/main.css
+++ b/themes/bqp-bcxp-oeb/main.css
@@ -12,6 +12,8 @@ background: white !important;
 /* This sets the background of main content area in the call*/
 .T4LgNb { 
     background: #bdf46c7d url("https://raw.githubusercontent.com/ShopSid/meet-immersion-css/main/themes/bqp-bcxp-oeb/bliss.jpeg") !important;
+    background-repeat: no-repeat;
+    background-size: auto;
 } 
 
 /* This sets the background for the little bar at the bottom*/
