--- a/themes/jxq-pgsa-ogk/main.css
+++ b/themes/jxq-pgsa-ogk/main.css
@@ -25,7 +25,7 @@ background: white !important;
 .AwnI1b {
     border-radius: 30px !important;
     transform: scale(.8)!important;
-    border-image: linear-gradient(to right, rgb(255, 255, 255), rgb(0, 11, 6)) 1;
+    border-image: linear-gradient(to right, rgb(255, 255, 255), rgb(0, 11, 6)) 1 !important;
     border-width: 20px!important;
     border-style: solid!important;
     background: #67e7ddb5;
